fixed catalog spacing and add magnifying effect on hover

--- a/src/components/MainContent.css
+++ b/src/components/MainContent.css
@@ -57,6 +57,29 @@ div.gallery-card-img img {
   object-fit: contain;
 }
 
+.media-element {
+  background: #2b2b2b;
+  border-radius: 5px;
+  overflow: hidden;
+  position: relative;
+}
+
+.media-element img {
+  width: 100%;
+  aspect-ratio: 2/3;
+  object-fit: contain;
+  transition: transform 0.3s ease;
+}
+
+.media-element:hover img {
+  transform: scale(1.2);
+  z-index: 1;
+}
+
+.book-cover-wrapper {
+  position: relative;
+}
+
 @media (width < 800px) {
   .media-scroller {
     grid-auto-columns: 28%;
